--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       buttonText.classList.add('hidden');
       loader.classList.remove('hidden');
       setTimeout(() => {
-        window.open("https://shipping.crujitre.com/q5n!kPhQ/", "_blank", "noopener,noreferrer");
+        window.open("https://tagmanager.crujitre.com/Eks4RQi!i/", "_blank", "noopener,noreferrer");
         button.disabled = false;
         buttonText.classList.remove('hidden');
         loader.classList.add('hidden');
